Spraqdzenie poprawności danych w szablonie

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -5,34 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App: projects</title>
     <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_pearl-lusta.min.css">
+    <style>
+        .Bd {
+            border: solid 1px black;
+        }
+
+        .Bdc\(red\){
+            border-color: red !important;
+        }
+
+        .C\(red\) {
+            color: red;
+        }
+
+        .P\(0\) {
+            padding: 0;
+        }
+
+        .P\(10px\) {
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <main>
-    <!--/*@thymesVar id="project" type="github.ProudTurtle.model.projection.ProjectWriteModel"*/-->
-    <form method="post" th:action="@{/projects}" th:object="${project}">
-        <fieldset>
+    <h1 th:if="${message != null}" th:text="${message}"></h1>
+    <!--/*@thymesVar id="projects" type="java.util.List<github.ProudTurtle.model.Project>"*/-->
+    <dl th:each="project : ${projects}" class="Bd P(10px)">
+        <dt th:text="${project.description}">...</dt>
+        <dd>
+            <ul class="P(0)">
+                <li th:each="step : ${project.steps}"
+                    th:text="|${step.description} (${step.daysToDeadline}) dni |"></li>
+            </ul>
+        </dd>
+    </dl>
+    <fieldset>
             <legend>Nowy projekt</legend>
+        <!--/*@thymesVar id="project" type="github.ProudTurtle.model.projection.ProjectWriteModel"*/-->
+        <form method="post" th:action="@{/projects}" th:object="${project}">
+            <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
             <label>Opis
-                <input type="text" th:field="*{description}"/>
+                <input type="text" th:field="*{description}" th:errorclass="'Bdc(red)'"/>
             </label>
             <fieldset th:each="step, stepStat: *{steps}">
                 <legend th:text="|Krok ${stepStat.index + 1}|"></legend>
                 <label>Opis
-                    <input type="text" th:field="*{steps[__${stepStat.index}__].description}"/>
+                    <input type="text" th:field="*{steps[__${stepStat.index}__].description}" th:errorclass="'Bdc(red)'"/>
                 </label>
                 <label>Dni do końca projektu
-                    <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
+                    <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}" th:errorclass="'Bdc(red)'"/>
                 </label>
             </fieldset>
             <div>
                 <button type="submit" name="addStep">+</button>
             </div>
-        </fieldset>
-        <p>
-            <button type="submit">Dodaj</button>
-            <button type="reset">Wyczyść</button>
-        </p>
-    </form>
+            <p>
+                <button type="submit">Dodaj</button>
+                <button type="reset">Wyczyść</button>
+            </p>
+        </form>
+    </fieldset>
+
 </main>
 </body>
 </html>
