--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -38,6 +38,12 @@
                 <li th:each="step : ${project.steps}"
                     th:text="|${step.description} (${step.daysToDeadline}) dni |"></li>
             </ul>
+            <form action="#" method="post" th:action="@{/projects/{projectId}(projectId=${project.id})}">
+                <label>Deadline
+                <input name="deadline" type="datetime-local" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
+                </label>
+                <button type="submit">Utwórz taski </button>
+            </form>
         </dd>
     </dl>
     <fieldset>
